更新一些细节

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -172,7 +172,7 @@
 							<div class="col">
 								<ul class="nav">
 									<li class="nav-item">
-										<a class="nav-link text-light" href="https://github.com/David6060">GitHub</a>
+										<a class="nav-link text-light" href="https://github.com/ZDW6060">GitHub</a>
 									</li>
 								</ul>
 							</div>
@@ -181,7 +181,7 @@
 							<div class="col">
 								<ul class="nav btn-group-vertical company-info">
 									<li class="nav-item text-white-50">
-										联系方式：zhong_dawei@foxmail.com
+										联系方式：115274737@qq.com
 									</li>
 									<li class="nav-item text-white-50">
 										Community ©2021 All rights reserved
