--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,7 +69,20 @@
 						<li class="nav-item">
 							<a th:class="|nav-link ${orderMode==1?'active':''}|" th:href="@{/index(orderMode=1)}">最热</a>
 						</li>
+						<li class="nav-item" style="margin-left: 150px;">
+							<a th:class="|nav-link ${orderMode==2?'active':''}|" th:href="@{/index(orderMode=2)}">学习笔记</a>
+						</li>
+						<li class="nav-item">
+							<a th:class="|nav-link ${orderMode==3?'active':''}|" th:href="@{/index(orderMode=3)}">问题讨论</a>
+						</li>
+						<li class="nav-item">
+							<a th:class="|nav-link ${orderMode==4?'active':''}|" th:href="@{/index(orderMode=4)}">资料分享</a>
+						</li>
+						<li class="nav-item">
+							<a th:class="|nav-link ${orderMode==5?'active':''}|" th:href="@{/index(orderMode=5)}">其他</a>
+						</li>
 					</ul>
+
 					<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal" th:if="${loginUser!=null}">我要发布</button>
 				</div>
 				<!-- 弹出框 -->
@@ -77,7 +90,7 @@
 					<div class="modal-dialog modal-lg" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title" id="publishModalLabel">新帖发布</h5>
+								<h5 class="modal-title" id="publishModalLabel">博客发布</h5>
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
@@ -87,6 +100,15 @@
 									<div class="form-group">
 										<label for="recipient-name" class="col-form-label">标题：</label>
 										<input type="text" class="form-control" id="recipient-name">
+									</div>
+									<div class="form-group" style="width: 130px">
+										<label for="recipient-name" class="col-form-label">博客类型：</label>
+										<select id="post-type" class="selectpicker show-menu-arrow form-control">
+											<option value="1">学习笔记</option>
+											<option value="2">问题讨论</option>
+											<option value="3">资料分享</option>
+											<option value="4">其他</option>
+										</select>
 									</div>
 									<div class="form-group">
 										<label for="message-text" class="col-form-label">正文：</label>
@@ -115,7 +137,7 @@
 					</div>
 				</div>
 				
-				<!-- 帖子列表 map代表一个帖子 -->
+				<!-- 博客列表 map代表一个博客 -->
 				<ul class="list-unstyled">
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="map:${discussPosts}">
 						<a th:href="@{|/user/profile/${map.user.id}|}">
@@ -124,7 +146,8 @@
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<!--如果跳转路径有变量，要加上||。注意取变量是用$-->
-								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>
+								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								<span href="#" th:utext="${map.post.kindName}" style="font-weight:bold;font-size: 13px"></span>
 								<span class="badge badge-secondary bg-primary" th:if="${map.post.type==1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${map.post.status==1}">精华</span>
 							</h6>
@@ -133,7 +156,7 @@
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">赞 <span th:text="${map.likeCount}">11</span></li>
 									<li class="d-inline ml-2">|</li>
-									<li class="d-inline ml-2">回帖 <span th:text="${map.post.commentCount}">7</span></li>
+									<li class="d-inline ml-2">回复 <span th:text="${map.post.commentCount}">7</span></li>
 								</ul>
 							</div>
 						</div>						
@@ -172,7 +195,7 @@
 							<div class="col">
 								<ul class="nav">
 									<li class="nav-item">
-										<a class="nav-link text-light" href="https://github.com/ZDW6060">GitHub</a>
+										<a class="nav-link text-light" href="https://github.com/ZDW6060" target="_blank">GitHub</a>
 									</li>
 								</ul>
 							</div>
