--- a/src/main/resources/templates/site/my-comment.html
+++ b/src/main/resources/templates/site/my-comment.html
@@ -25,7 +25,7 @@
 							<a th:class="|nav-link ${infoMode==0?'active':''}|" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a th:class="|nav-link ${infoMode==1?'active':''}|" th:href="@{|/user/mypost/${user.id}|}" th:text="${loginUser.id!=user.id?'它的帖子':'我的帖子'}">我的帖子</a>
+							<a th:class="|nav-link ${infoMode==1?'active':''}|" th:href="@{|/user/mypost/${user.id}|}" th:text="${loginUser.id!=user.id?'它的博客':'我的博客'}">我的博客</a>
 						</li>
 						<li class="nav-item">
 							<a th:class="|nav-link ${infoMode==2?'active':''}|" th:href="@{|/user/mycomment/${user.id}|}" th:text="${loginUser.id!=user.id?'它的评论':'我的评论'}">我的评论</a>
@@ -35,7 +35,7 @@
 				</div>
 				<!-- 我的评论 -->
 				<div class="mt-4">
-					<h6><b class="square"></b> 评论的帖子(<i th:text="${commentCount}"></i>)</h6>
+					<h6><b class="square"></b> 评论的博客(<i th:text="${commentCount}"></i>)</h6>
 					<ul class="list-unstyled mt-4 pl-3 pr-3">
 						<li class="border-bottom pb-3 mt-4" th:each="map:${comments}">
 							<div class="font-size-16 text-info">
