--- a/src/main/resources/templates/site/notice-detail.html
+++ b/src/main/resources/templates/site/notice-detail.html
@@ -44,13 +44,13 @@
 								<span th:if="${topic.equals('comment')}">
 									用户
 									<i th:utext="${map.user.username}">user</i>
-									评论了你的<b th:text="${map.entityType==1?'帖子':'回复'}">帖子</b>,
+									评论了你的<b th:text="${map.entityType==1?'博客':'回复'}">博客</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
 								<span th:if="${topic.equals('like')}">
 									用户
 									<i th:utext="${map.user.username}">user</i>
-									点赞了你的<b th:text="${map.entityType==1?'帖子':'回复'}">帖子</b>,
+									点赞了你的<b th:text="${map.entityType==1?'博客':'回复'}">博客</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
 								<span th:if="${topic.equals('follow')}">
