--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -28,19 +28,42 @@
 							<input type="text"
 								   th:class="|form-control ${usernameMsg!=null?'is-invalid':''}|"
 								   th:value="${user!=null?user.username:''}"
-								   id="username" name="username" placeholder="请输入您的账号!" required>
+								   id="username" name="username" placeholder="请输入您的学号或工号！" required>
 							<div class="invalid-feedback" th:text="${usernameMsg}">
 								该账号已存在!
 							</div>
 						</div>
 					</div>
 					<div class="form-group row mt-4">
+						<label for="name" class="col-sm-2 col-form-label text-right">用户名:</label>
+						<div class="col-sm-10">
+							<input type="text"
+								   th:class="|form-control ${nameMsg!=null?'is-invalid':''}|"
+								   th:value="${user!=null?user.name:''}"
+								   id="name" name="name" placeholder="请输入您的真实姓名！" required>
+							<div class="invalid-feedback" th:text="${nameMsg}">
+								该用户名已存在!
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<label class="col-sm-2 col-form-label text-right">身份:</label>
+						<div class="col-sm-10 col-form-label">
+							<label class="radio-inline">
+								<input type="radio" name="role" value="0" th:checked="${user!=null}?${user.role==0}" required> 学生&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+							<label class="radio-inline">
+								<input type="radio" name="role" value="1" th:checked="${user!=null}?${user.role==1}" required> 老师
+							</label>
+						</div>
+					</div>
+					<div class="form-group row">
 						<label for="password" class="col-sm-2 col-form-label text-right">密码:</label>
 						<div class="col-sm-10">
 							<input type="password"
 								   th:class="|form-control ${passwordMsg!=null?'is-invalid':''}|"
 								   th:value="${user!=null?user.password:''}"
-								   id="password" name="password" placeholder="请输入您的密码!" required>
+								   id="password" name="password" placeholder="请输入您的密码！" required>
 							<div class="invalid-feedback" th:text="${passwordMsg}">
 								密码长度不能小于8位!
 							</div>							
@@ -52,19 +75,19 @@
 							<input type="password"
 								   th:class="|form-control ${confirmPasswordMsg!=null?'is-invalid':''}|"
 								   th:value="${param.confirmPassword}"
-								   id="confirmPassword" name="confirmPassword" placeholder="请再次输入密码!" required>
+								   id="confirmPassword" name="confirmPassword" placeholder="请再次输入密码！" required>
 							<div class="invalid-feedback" th:text="${confirmPasswordMsg}">
 								两次输入的密码不一致!
 							</div>
 						</div>
 					</div>
-					<div class="form-group row">
+					<div class="form-group row mt-4">
 						<label for="email" class="col-sm-2 col-form-label text-right">邮箱:</label>
 						<div class="col-sm-10">
 							<input type="email"
 								   th:class="|form-control ${emailMsg!=null?'is-invalid':''}|"
 								   th:value="${user!=null?user.email:''}"
-								   id="email" name="email" placeholder="请输入您的邮箱!" required>
+								   id="email" name="email" placeholder="请输入您的邮箱！" required>
 							<div class="invalid-feedback" th:text="${emailMsg}">
 								该邮箱已注册!
 							</div>
