--- a/src/main/resources/templates/site/search.html
+++ b/src/main/resources/templates/site/search.html
@@ -18,8 +18,8 @@
 		<!-- 内容 -->
 		<div class="main">
 			<div class="container">
-				<h6><b class="square"></b> 相关帖子</h6>
-				<!-- 帖子列表 -->
+				<h6><b class="square"></b> 相关博客</h6>
+				<!-- 博客列表 -->
 				<ul class="list-unstyled mt-4">
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="map:${discussPosts}">
 						<img th:src="${map.user.headerUrl}" class="mr-4 rounded-circle" alt="用户头像" style="width:50px;height:50px;">
