--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" th:href="@{/img/icon.png}"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
 	<title>个人主页</title>
 </head>
@@ -25,10 +26,16 @@
 							<a th:class="|nav-link ${infoMode==0?'active':''}|" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a th:class="|nav-link ${infoMode==1?'active':''}|" th:href="@{|/user/mypost/${user.id}|}" th:text="${loginUser.id!=user.id?'它的博客':'我的博客'}">我的博客</a>
+							<a th:class="|nav-link ${infoMode==1?'active':''}|" th:href="@{|/user/mypost/${user.id}|}" th:text="我的博客" th:if="${loginUser.id==user.id}">我的博客</a>
 						</li>
 						<li class="nav-item">
-							<a th:class="|nav-link ${infoMode==2?'active':''}|" th:href="@{|/user/mycomment/${user.id}|}" th:text="${loginUser.id!=user.id?'它的评论':'我的评论'}">我的评论</a>
+							<a th:class="|nav-link ${infoMode==2?'active':''}|" th:href="@{|/user/mycomment/${user.id}|}" th:text="我的评论" th:if="${loginUser.id==user.id}">我的评论</a>
+						</li>
+						<li class="nav-item">
+							<a th:class="|nav-link ${infoMode==1?'active':''}|" th:href="@{|/user/mypost/${user.id}|}" th:text="${user.sex==0?'他的博客':'她的博客'}" th:if="${loginUser.id!=user.id}">他的博客</a>
+						</li>
+						<li class="nav-item">
+							<a th:class="|nav-link ${infoMode==2?'active':''}|" th:href="@{|/user/mycomment/${user.id}|}" th:text="${user.sex==0?'他的评论':'她的评论'}" th:if="${loginUser.id!=user.id}">他的评论</a>
 						</li>
 					</ul>
 				</div>
@@ -37,7 +44,10 @@
 					<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle" alt="用户头像" style="width:50px;height: 50px">
 					<div class="media-body">
 						<h5 class="mt-0 text-warning">
-							<span th:utext="${user.username}">user</span>
+							<span th:utext="${user.username}">user</span>&nbsp;&nbsp;
+							<span th:utext="${user.role==0?'学生':'老师'}">user</span>
+							<span class="fa fa-mars" style="font-size:18px;color: deepskyblue;font-weight: bold" th:if="${user.sex==0}"></span>
+							<span class="fa fa-venus" style="font-size:18px;color: red;font-weight: bold" th:if="${user.sex==1}"></span>
 							<input type="hidden" id="entityId" th:value="${user.id}">
 							<button type="button" th:class="|btn ${hasFollowed?'btn-secondary':'btn-info'} btn-sm float-right mr-5 follow-btn|"
 									th:text="${hasFollowed?'已关注':'关注TA'}" th:if="${loginUser!=null&&loginUser.id!=user.id}">关注TA</button>
