--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -47,6 +47,17 @@
 						</div>
 					</div>
 					<div class="row">
+						<label class="col-sm-2 col-form-label text-right">性别:</label>
+						<div class="col-sm-10 col-form-label">
+							<label class="radio-inline">
+								<input type="radio" name="sex" value="0" th:checked="${user!=null}?${user.sex==0}" required> 男&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+							</label>
+							<label class="radio-inline">
+								<input type="radio" name="sex" value="1" th:checked="${user!=null}?${user.sex==1}" required> 女
+							</label>
+						</div>
+					</div>
+					<div class="row">
 						<label class="col-sm-2 col-form-label text-right">身份:</label>
 						<div class="col-sm-10 col-form-label">
 							<label class="radio-inline">
