--- a/src/main/resources/templates/site/follower.html
+++ b/src/main/resources/templates/site/follower.html
@@ -23,12 +23,12 @@
 					<ul class="nav nav-tabs mb-3">
 						<li class="nav-item">
 							<a class="nav-link position-relative" th:href="@{|/followees/${user.id}|}">
-								<i class="text-info" th:utext="${user.username}">User</i> 关注的人
+								<i class="text-info" th:utext="${user.name}">User</i> 关注的人
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link position-relative active" th:href="@{|/followers/${user.id}|}">
-								关注 <i class="text-info" th:utext="${user.username}">User</i> 的人
+								关注 <i class="text-info" th:utext="${user.name}">User</i> 的人
 							</a>
 						</li>
 					</ul>
@@ -43,7 +43,7 @@
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
-								<span class="text-success" th:utext="${map.user.username}">落基山脉下的闲人</span>
+								<span class="text-success" th:utext="${map.user.name}">落基山脉下的闲人</span>
 								<span class="float-right text-muted font-size-12">
 									关注于 <i th:text="${#dates.format(map.followTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25</i>
 								</span>
