--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 									<a class="dropdown-item text-center" th:href="@{/user/setting}">账号设置</a>
 									<a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
 									<div class="dropdown-divider"></div>
-									<span class="dropdown-item text-center text-secondary" th:utext="${loginUser.username}">user</span>
+									<span class="dropdown-item text-center text-secondary" th:utext="${loginUser.name}">user</span>
 								</div>
 							</li>
 						</ul>
@@ -147,15 +147,15 @@
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<!--如果跳转路径有变量，要加上||。注意取变量是用$-->
-								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}" style="color:#69757d;font-size: 13px;font-weight:bold">备战春招，面试刷题跟他复习，一个月全搞定！</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.kindName}" style="font-weight:bold;font-size: 13px"></a>
 								<span class="badge badge-secondary bg-primary" th:if="${map.post.type==1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${map.post.status==1}">精华</span>
 							</h6>
 							<div class="text-muted font-size-12">
-								<u class="mr-3" th:utext="${map.user.username}">寒江雪</u> 发布于 <b th:text="${#dates.format(map.post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>&nbsp;
+								<u class="mr-3" th:utext="${map.user.name}">寒江雪</u> 发布于 <b th:text="${#dates.format(map.post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>&nbsp;
 								<span class="badge badge-secondary bg-success" th:if="${map.post.category==0}">学生帖</span>
-								<span class="badge badge-secondary bg-success" th:if="${map.post.category==1}">老师帖</span>
+								<span class="badge badge-secondary bg-muted" th:if="${map.post.category==1}">老师帖</span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">赞 <span th:text="${map.likeCount}">11</span></li>
 									<li class="d-inline ml-2">|</li>
