--- a/src/main/resources/templates/site/letter-detail.html
+++ b/src/main/resources/templates/site/letter-detail.html
@@ -21,7 +21,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-8">
-						<h6><b class="square"></b> 来自 <i class="text-success" th:utext="${target.username}">落基山脉下的闲人</i> 的私信</h6>
+						<h6><b class="square"></b> 来自 <i class="text-success" th:utext="${target.name}">落基山脉下的闲人</i> 的私信</h6>
 					</div>
 					<div class="col-4 text-right">
 						<button type="button" class="btn btn-secondary btn-sm" onclick="back();">返回</button>
@@ -42,7 +42,7 @@
 								<form>
 									<div class="form-group">
 										<label for="recipient-name" class="col-form-label">发给：</label>
-										<input type="text" class="form-control" id="recipient-name" th:value="${target.username}">
+										<input type="text" class="form-control" id="recipient-name" th:value="${target.name}">
 									</div>
 									<div class="form-group">
 										<label for="message-text" class="col-form-label">内容：</label>
@@ -79,7 +79,7 @@
 						</a>
 						<div class="toast show d-lg-block" role="alert" aria-live="assertive" aria-atomic="true">
 							<div class="toast-header">
-								<strong class="mr-auto" th:utext="${map.fromUser.username}">落基山脉下的闲人</strong>
+								<strong class="mr-auto" th:utext="${map.fromUser.name}">落基山脉下的闲人</strong>
 								<small th:text="${#dates.format(map.letter.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-25 15:49:32</small>
 								<button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
