--- a/src/main/resources/templates/site/letter.html
+++ b/src/main/resources/templates/site/letter.html
@@ -88,7 +88,7 @@
 						</a>
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
-								<span class="text-success" th:utext="${map.target.username}">落基山脉下的闲人</span>
+								<span class="text-success" th:utext="${map.target.name}">落基山脉下的闲人</span>
 								<span class="float-right text-muted font-size-12" th:text="${#dates.format(map.conversation.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-28 14:13:25</span>
 							</h6>
 							<div>
