--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -56,7 +56,7 @@
 							</div>
 						</div>
 						<div class="col-sm-4">
-							<img th:src="@{/kaptcha}" id="kaptcha" style="width:100px;height:40px;" class="mr-2"/>
+							<img th:src="@{/kaptcha}" onclick="refresh_kaptcha()" id="kaptcha" style="width:100px;height:40px;" class="mr-2"/>
 							<a href="javascript:refresh_kaptcha();" class="font-size-12 align-bottom ">刷新验证码</a>
 						</div>
 					</div>				
