--- a/src/main/resources/templates/site/notice-detail.html
+++ b/src/main/resources/templates/site/notice-detail.html
@@ -34,7 +34,7 @@
 						<img th:src="${map.fromUser.headerUrl}" class="mr-4 rounded-circle user-header" alt="系统图标">
 						<div class="toast show d-lg-block" role="alert" aria-live="assertive" aria-atomic="true">
 							<div class="toast-header">
-								<strong class="mr-auto" th:utext="${map.fromUser.username}">落基山脉下的闲人</strong>
+								<strong class="mr-auto" th:utext="${map.fromUser.name}">落基山脉下的闲人</strong>
 								<small th:text="${#dates.format(map.notice.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-25 15:49:32</small>
 								<button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
@@ -43,19 +43,19 @@
 							<div class="toast-body">
 								<span th:if="${topic.equals('comment')}">
 									用户
-									<i th:utext="${map.user.username}">user</i>
+									<i th:utext="${map.user.name}">user</i>
 									评论了你的<b th:text="${map.entityType==1?'博客':'回复'}">博客</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
 								<span th:if="${topic.equals('like')}">
 									用户
-									<i th:utext="${map.user.username}">user</i>
+									<i th:utext="${map.user.name}">user</i>
 									点赞了你的<b th:text="${map.entityType==1?'博客':'回复'}">博客</b>,
 									<a class="text-primary" th:href="@{|/discuss/detail/${map.postId}|}">点击查看</a> !
 								</span>
 								<span th:if="${topic.equals('follow')}">
 									用户
-									<i th:utext="${map.user.username}">user</i>
+									<i th:utext="${map.user.name}">user</i>
 									关注了你,
 									<a class="text-primary" th:href="@{|/user/profile/${map.user.id}|}">点击查看</a> !
 								</span>
