--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -44,7 +44,7 @@
 					<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle" alt="用户头像" style="width:50px;height: 50px">
 					<div class="media-body">
 						<h5 class="mt-0 text-warning">
-							<span th:utext="${user.username}">user</span>&nbsp;&nbsp;
+							<span th:utext="${user.name}">user</span>&nbsp;&nbsp;
 							<span th:utext="${user.role==0?'学生':'老师'}">user</span>
 							<span class="fa fa-mars" style="font-size:18px;color: deepskyblue;font-weight: bold" th:if="${user.sex==0}"></span>
 							<span class="fa fa-venus" style="font-size:18px;color: red;font-weight: bold" th:if="${user.sex==1}"></span>
