--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -31,8 +31,25 @@
 								th:text="${post.type==1?'已置顶':'置顶'}" sec:authorize="hasAnyAuthority('admin')">置顶</button>
 						<button type="button" th:class="|btn ${post.status==1?'btn-secondary':'btn-danger'} btn-sm|" id="wonderfulBtn"
 								th:text="${post.status==1?'已加精':'加精'}" sec:authorize="hasAnyAuthority('admin')">加精</button>
-						<button type="button" class="btn btn-danger btn-sm" id="deleteBtn"
-								th:disabled="${post.status==2}" sec:authorize="hasAnyAuthority('admin')">删除</button>
+						<button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal"
+								sec:authorize="hasAnyAuthority('admin')">删除</button>
+						<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel">
+							<div class="modal-dialog" role="document">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h6 class="modal-title" id="deleteModalLabel">提示</h6>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+									</div>
+									<div class="modal-body">
+										<h6>您确认要删除这篇博客吗？</h6>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+										<button type="button" class="btn btn-primary" id="deleteBtn">确认</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</h6>
 				<!-- 作者 -->
@@ -43,17 +60,32 @@
 					<img th:src="${user.headerUrl}" th:if="${loginUser==null}" class="mr-4 rounded-circle" alt="用户头像" style="width:50px;height:50px;">
 					<div class="media-body">
 						<div class="mt-0 text-warning" th:utext="${user.name}">寒江雪</div>
-						<div class="text-muted mt-3">
-							发布于 <b th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
-							<ul class="d-inline float-right">
-								<li class="d-inline ml-2">
+						<div class="mt-3">
+							<b style="color:#69757d">发布于</b> <b style="color:#69757d" th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
+							<div class="d-inline float-right">
+								<a href="#delModal" data-toggle="modal" class="text-primary float-left" th:if="${loginUser!=null && loginUser.id==post.userId}">删除</a>&nbsp;&nbsp;&nbsp;&nbsp;
+								<div class="modal fade" id="delModal" tabindex="-1" role="dialog" aria-labelledby="delModalLabel">
+									<div class="modal-dialog" role="document">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h6 class="modal-title" id="delModalLabel" style="color:black!important">提示</h6>
+												<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+											</div>
+											<div class="modal-body">
+												<h6 style="color:black!important">您确认要删除这篇博客吗？</h6>
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+												<button type="button" class="btn btn-primary" id="delBtn">确认</button>
+											</div>
+										</div>
+									</div>
+								</div>
 									<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
 										<b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
-									</a>
-								</li>
-								<li class="d-inline ml-2">|</li>
-								<li class="d-inline ml-2"><a href="#replyform" class="text-primary">回复 <i th:text="${post.commentCount}">7</i></a></li>
-							</ul>
+									</a>&nbsp;&nbsp;&nbsp;
+								<a href="#replyform" class="text-primary">回复 <i th:text="${post.commentCount}">7</i></a>
+							</div>
 						</div>
 					</div>
 				</div>	
@@ -87,7 +119,7 @@
 						</a>
 						<div class="media-body">
 							<div class="mt-0">
-								<span class="font-size-12 text-success" th:utext="${cvo.user.name}">掉脑袋切切</span>
+								<span class="font-size-12 text-success" th:utext="${cvo.user.name}">范明</span>
 								<span class="badge badge-secondary float-right floor">
 									<i th:text="${page.offset + cvoStat.count}">1</i>#
 								</span>
@@ -97,15 +129,32 @@
 							</div>
 							<div class="mt-4 text-muted font-size-12">
 								<span>发布于 <b th:text="${#dates.format(cvo.comment.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
-								<ul class="d-inline float-right">
-									<li class="d-inline ml-2">
-										<a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|" class="text-primary">
-											<b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
-										</a>
-									</li>
-									<li class="d-inline ml-2">|</li>
-									<li class="d-inline ml-2"><a th:href="|#huifu1-${page.offset + cvoStat.count}|" class="text-primary">回复(<i th:text="${cvo.replyCount}">2</i>)</a></li>
-								</ul>
+								<div class="d-inline float-right">
+									<a href="#delComment" data-toggle="modal" class="text-primary float-left" sec:authorize="hasAnyAuthority('admin')">删除</a>
+									<a href="#delComment" data-toggle="modal" class="text-primary float-left" th:if="${loginUser!=null && loginUser.id==cvo.comment.userId}" sec:authorize="hasAnyAuthority('user')">删除</a>
+									&nbsp;&nbsp;&nbsp;
+									<div class="modal fade" id="delComment" tabindex="-1" role="dialog" aria-labelledby="delCommentLabel">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h6 class="modal-title" id="delCommentLabel" style="color:black!important">提示</h6>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+												</div>
+												<div class="modal-body">
+													<h6 style="color:black!important">您确认要删除这条评论吗？</h6>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+													<button type="button" class="btn btn-primary" th:onclick="|delComment(${cvo.comment.id},${post.id});|">确认</button>
+												</div>
+											</div>
+										</div>
+									</div>
+									<a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|" class="text-primary">
+										<b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
+									</a>&nbsp;&nbsp;
+									<a th:href="|#huifu1-${page.offset + cvoStat.count}|" class="text-primary">回复(<i th:text="${cvo.replyCount}">2</i>)</a>
+								</div>
 							</div>
 							<!-- 回复列表 -->
 							<ul class="list-unstyled mt-4 bg-gray p-3 font-size-12 text-muted">
@@ -122,15 +171,32 @@
 									</div>
 									<div class="mt-3">
 										<span th:text="${#dates.format(rvo.reply.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
-										<ul class="d-inline float-right">
-											<li class="d-inline ml-2">
-												<a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|" class="text-primary">
-													<b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
-												</a>
-											</li>
-											<li class="d-inline ml-2">|</li>
-											<li class="d-inline ml-2"><a th:href="|#huifu-${rvoStat.count}|" data-toggle="collapse" class="text-primary">回复</a></li>
-										</ul>
+										<div class="d-inline float-right">
+											<a href="#delReply" data-toggle="modal" class="text-primary float-left" sec:authorize="hasAnyAuthority('admin')">删除</a>
+											<a href="#delReply" data-toggle="modal" class="text-primary float-left" th:if="${loginUser!=null && loginUser.id==rvo.reply.userId}" sec:authorize="hasAnyAuthority('user')">删除</a>
+											&nbsp;&nbsp;&nbsp;
+											<div class="modal fade" id="delReply" tabindex="-1" role="dialog" aria-labelledby="delReplyLabel">
+												<div class="modal-dialog" role="document">
+													<div class="modal-content">
+														<div class="modal-header">
+															<h6 class="modal-title" id="delReplyLabel" style="color:black!important">提示</h6>
+															<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+														</div>
+														<div class="modal-body">
+															<h6 style="color:black!important">您确认要删除这条评论吗？</h6>
+														</div>
+														<div class="modal-footer">
+															<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+															<button type="button" class="btn btn-primary" th:onclick="|delReply(${rvo.reply.id},${post.id});|">确认</button>
+														</div>
+													</div>
+												</div>
+											</div>
+											<a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|" class="text-primary">
+												<b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
+											</a>&nbsp;&nbsp;
+											<a th:href="|#huifu-${rvoStat.count}|" data-toggle="collapse" class="text-primary">回复</a>
+										</div>
 										<div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">
 											<form method="post" th:action="@{|/comment/add/${post.id}|}">
 												<div>
