--- a/src/main/resources/templates/site/manage-comment.html
+++ b/src/main/resources/templates/site/manage-comment.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -5,21 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" th:href="@{/img/icon.png}"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 	<link rel="stylesheet" th:href="@{/css/global.css}" />
-	<title>个人主页</title>
+	<title>我的评论</title>
 </head>
 <body>
 	<div class="nk-container">
-		<!-- 头部 -->
+		&lt;!&ndash; 头部 &ndash;&gt;
 		<header class="bg-dark sticky-top" th:replace="index::header">
 
 		</header>
 
-		<!-- 内容 -->
+		&lt;!&ndash; 内容 &ndash;&gt;
 		<div class="main">
 			<div class="container">
-				<!-- 选项 -->
+				&lt;!&ndash; 选项 &ndash;&gt;
 				<div class="position-relative">
 					<ul class="nav nav-tabs">
 						<li class="nav-item">
@@ -38,34 +38,32 @@
 							<a th:class="|nav-link ${infoMode==2?'active':''}|" th:href="@{|/user/mycomment/${user.id}|}" th:text="${user.sex==0?'他的评论':'她的评论'}" th:if="${loginUser.id!=user.id}">他的评论</a>
 						</li>
 					</ul>
+					<a th:href="@{|/user/profile/${user.id}|}" class="text-muted position-absolute rt-0" th:if="${loginUser.id==user.id}">返回个人主页&gt;</a>
 				</div>
-				<!-- 个人信息 -->
-				<div class="media mt-5">
-					<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle" alt="用户头像" style="width:50px;height: 50px">
-					<div class="media-body">
-						<h5 class="mt-0">
-							<span th:utext="${user.name}" style="color:#69757d">user</span>&nbsp;&nbsp;
-							<span th:utext="${user.role==0?'学生':'老师'}" style="color:#69757d">user</span>
-							<span class="fa fa-mars" style="font-size:18px;color: deepskyblue;font-weight: bold" th:if="${user.sex==0}"></span>
-							<span class="fa fa-venus" style="font-size:18px;color: red;font-weight: bold" th:if="${user.sex==1}"></span>
-							<input type="hidden" id="entityId" th:value="${user.id}">
-							<button type="button" th:class="|btn ${hasFollowed?'btn-secondary':'btn-info'} btn-sm float-right mr-5 follow-btn|"
-									th:text="${hasFollowed?'已关注':'关注TA'}" th:if="${loginUser!=null&&loginUser.id!=user.id}">关注TA</button>
-						</h5>
-						<div class="text-muted mt-3">
-							<span>注册于 <i class="text-muted" th:text="${#dates.format(user.createTime,'yyyy-MM-dd HH:mm:ss')}">2015-06-12 15:20:12</i></span>
-						</div>
-						<div class="text-muted mt-3 mb-5">
-							<span>关注了 <a class="text-primary" th:href="@{|/followees/${user.id}|}" th:text="${followeeCount}">5</a> 人</span>
-							<span class="ml-4">关注者 <a class="text-primary" th:href="@{|/followers/${user.id}|}" th:text="${followerCount}">123</a> 人</span>
-							<span class="ml-4">获得了 <i class="text-danger" th:text="${likeCount}">87</i> 个赞</span>
-						</div>
-					</div>
+				&lt;!&ndash; 我的评论 &ndash;&gt;
+				<div class="mt-4">
+					<h6><b class="square"></b> 评论的博客(<i th:text="${commentCount}"></i>)</h6>
+					<ul class="list-unstyled mt-4 pl-3 pr-3">
+						<li class="border-bottom pb-3 mt-4" th:each="map:${comments}">
+							<div class="font-size-16 text-info">
+								<a th:href="@{|/discuss/detail/${map.comment.entityId}|}" class="text-info"
+								   th:utext="${map.discussPostTitle}"></a>
+							</div>
+							<div class="mt-1 font-size-14" th:utext="${map.comment.content}"></div>
+							<div class="text-right font-size-12 text-muted">
+								评论于 <b th:text="${#dates.format(map.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}"></b>
+							</div>
+						</li>
+					</ul>
+					&lt;!&ndash; 分页 &ndash;&gt;
+					<nav class="mt-5" th:replace="index::pagination">
+
+					</nav>
 				</div>
 			</div>
 		</div>
 
-		<!-- 尾部 -->
+		&lt;!&ndash; 尾部 &ndash;&gt;
 		<footer class="bg-dark" th:replace="index::footer">
 
 		</footer>
@@ -75,6 +73,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
-	<script th:src="@{/js/profile.js}"></script>
 </body>
 </html>
+-->
